--- a/2-4.html
+++ b/2-4.html
@@ -64,6 +64,9 @@ IGES/STLฅชกผฅืฅ๓ฅภฅคฅขฅํฅฐค๒ษฝผจคทคÞคนกฃ<BR>
 <LI>exp -r (Value)<BR><BR>
 ฐ๚ฟ๔rค๒ปุฤ๊คนค๋คศกขValueควปุฤ๊คทคฟวÜฮจควBODYค๒ณศย็กฆฝฬพฎคทคÞคนกฃ<BR><BR>
 
+<LI>move -r (Value_X) (Value_Y) (Value_Z)<BR><BR>
+ฐ๚ฟ๔rค๒ปุฤ๊คนค๋คศกขValueควปุฤ๊คทคฟฐÜฦฐฮฬคภคฑควBODYค๒สฟนิฐÜฦฐคทคÞคนกฃ<BR><BR>
+
 
 <LI>rots<BR><BR>
 ฒ๓ลพฅตกผฅีฅงฅนค๒ภธภฎคทคÞคนกฃ
@@ -115,6 +118,16 @@ Inputฅีฅกฅคฅ๋ค๒มชย๒คทกข"OK"ฅÜฅฟฅ๓ค๒ฒกคนคศกข1คฤคฮNURBSถสฬฬคฌภธภฎคตค์คÞคนกฃคÞคฟคฮค
 <P><CENTER><IMG SRC="pixmaps/Nurbss.jpg"></CENTER></P>
 <BR>
 กฮNURBSถสภþภธภฎคฮฒแฤ๘กฯ
+</CENTER></P>
+
+<LI>chrank -r (Value_U) (Value_V)<BR><BR>
+ฐ๚ฟ๔rค๒ปุฤ๊คนค๋คศกขValueควปุฤ๊คทคฟณฌฟ๔คฮถสฬฬคุคศสันนคทคÞคนกฃ
+ธฝปþลภควคฯถสฬฬคฮค฿คุคฮยะฑþคศคสครคฦคคคÞคนกฃ
+ณฌฟ๔ค๒พๅคฒค๋พ์น็คฯรํฐีคฌษฌอืควคนกฃณฌฟ๔คฯฅณฅ๓ฅศฅํกผฅ๋ฅÝฅคฅ๓ฅศคฮฟ๔คหฐอยธคทคÞคนกฃ<BR><BR>
+<P><CENTER>
+<P><CENTER><IMG SRC="pixmaps/chrank.jpg"></CENTER></P>
+<BR>
+กฮNURBSถสฬฬคฮณฌฟ๔คฮสันนฮใกฯ
 </CENTER></P>
 
 <BR><BR>
