--- a/3-4-1.html
+++ b/3-4-1.html
@@ -43,6 +43,7 @@
 ÅÉMulti Dimension MatrixÅÑ<BR>
     <A target="func" HREF="3-4-2.html# InitVector()"> InitVector()</A><BR>
     <A target="func" HREF="3-4-2.html# InitMatrix()"> InitMatrix()</A><BR>
+    <A target="func" HREF="3-4-2.html# CopyVector()"> CopyVector()</A><BR>   
     <A target="func" HREF="3-4-2.html# MulMxMx()"> MulMxMx()</A><BR>
     <A target="func" HREF="3-4-2.html# MulMxVec()"> MulMxVec()</A><BR>
     <A target="func" HREF="3-4-2.html# MulMxCoord()"> MulMxCoord()</A><BR>
