--- a/3-5-1.html
+++ b/3-5-1.html
@@ -6,6 +6,7 @@
 <H2>IGES_Parser</H2>
     <A target="func" HREF="3-5-2.html#IGES_Parser_Main()"> IGES_Parser_Main()</A><BR>
     <A target="func" HREF="3-5-2.html#NormalizeKnotRange()"> NormalizeKnotRange()</A><BR>
+    <A target="func" HREF="3-5-2.html#ExpandKnotRange()"> ExpandKnotRange()</A><BR>
     <A target="func" HREF="3-5-2.html#ModifyParamConect()"> ModifyParamConect()</A><BR>
     <A target="func" HREF="3-5-2.html#CheckDegenracy()"> CheckDegenracy()</A><BR>
     <A target="func" HREF="3-5-2.html#IGES_PARSER()"> IGES_PARSER()</A><BR>
@@ -42,6 +43,7 @@
     <A target="func" HREF="3-5-2.html#CirAToNurbsC_seg4()"> CirAToNurbsC_seg4()</A><BR>
     <A target="func" HREF="3-5-2.html#TransformNurbsC()"> TransformNurbsC()</A><BR>
     <A target="func" HREF="3-5-2.html#CheckKnotVecRange()"> CheckKnotVecRange()</A><BR>
+    <A target="func" HREF="3-5-2.html#SearchMinVecRange()"> SearchMinVecRange()</A><BR>
 
 </body> </html>
 
