--- a/1-1.html
+++ b/1-1.html
@@ -73,14 +73,16 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 <LI>2010/03 Kodatuno R1.0<BR>
 <LI>2011/03 Kodatuno R1.1　　　Wide Studioの実装、バグ修正、機能強化<BR>
 <LI>2011/11 Kodatuno R2.0　　　バグ修正、機能強化<BR>
+<LI>2012/05 Kodatuno R2.1　　　バグ修正<BR>
+
 </LI></UL>
 
 <BR><H3>クレジット</H3>
   総指揮：浅川直紀（金沢大学）<BR>
-  開発コアチーム：高杉敬吾（金沢大学），熊坂拓也（金沢大学）<BR>
+  開発コアチーム：高杉敬吾（金沢大学）<BR>
 
 <BR><BR><H3>謝辞</H3>
-  本システムの基礎開発に尽力いただいた元マンマシン研究室の西野高志、松本健児、三枝史岳の
+  本システムの基礎開発に尽力いただいた元マンマシン研究室の西野高志、松本健児、三枝史岳、熊坂拓也の
   諸氏に感謝します。<BR>
 
 <BR><BR><HR><H3><<免責事項>></H3>
