--- a/3-8.html
+++ b/3-8.html
@@ -37,10 +37,12 @@ JAMA-IS V1.04を準拠しています。各定義の詳細はJAMA-IS仕様書を参照してください。
 <BR>■シンボル
 <pre><font size="3">
 #define ALL_ENTITY_TYPE_NUM 20    全エンティティタイプの数
-#define CTLPNUMMAX          256           NURBSで用いられるコントロールポイントの数の上限
-#define KNOTNUMMAX          256           NURBSで用いられるノットシーケンスの数の上限
+#define CTLPNUMMAX          512           NURBSで用いられるコントロールポイントの数の上限
+#define KNOTNUMMAX          512           NURBSで用いられるノットシーケンスの数の上限
 #define GEOMTRYELEM         0             IGESディレクトリ部"Entity Use Flag"より、幾何要素を示す
-#define PARAMETRICELEM      5          IGESディレクトリ部"Entity Use Flag"より、2Dパラメトリック要素を示す
+#define PARAMETRICELEM      5             IGESディレクトリ部"Entity Use Flag"より、2Dパラメトリック要素を示す
+#define NORM_KNOT_VAL       1             ノットベクトルを正規化するときの範囲の最大値
+#define MIN_KNOT_RANGE      0.0002        隣り合うノットベクトルの差がこの値以上であること
 
 ＜エンティティタイプのシンボルを定義＞
 #define    CIRCLE_ARC                  100     円/円弧
