--- a/index.html
+++ b/index.html
@@ -37,37 +37,39 @@
 
 <H2>第1章 Kodatunoとは</H2>
 <ul>
-<LI><A HREF="1-1.html">1.1  Kodatunoとは </A></LI>
-<LI><A HREF="1-2.html">1.2  階層構造 </A></LI>
-<LI><A HREF="1-3.html">1.3  Kodatuno内部表現の概要 </A></LI>
-<LI><A HREF="1-4.html">1.4  Kodatuno内部でのCADデータの構成 </A></LI>
+	<LI><A HREF="1-1.html">1.1  Kodatunoとは </A></LI>
+	<LI><A HREF="1-2.html">1.2  階層構造 </A></LI>
+	<LI><A HREF="1-3.html">1.3  Kodatuno内部表現の概要 </A></LI>
+	<LI><A HREF="1-4.html">1.4  Kodatuno内部でのCADデータの構成 </A></LI>
 </ul>
 
 <H2>第2章 さあ始めよう</H2>
 <ul>
-<LI><A HREF="2-1.html">2.1  環境構築 </A></LI>
-<LI><A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A></LI>
-<LI><A HREF="2-3.html">2.3  各ウィンドウの名称と機能 </A></LI>
-<LI><A HREF="2-4.html">2.4  W/S Versionが持つ機能 </A></LI>
-<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行 (W/S Version) </A></LI>
-<LI><A HREF="2-6.html">2.6  サンプルアプリケーションのソース解説 (W/S Version) </A></LI>
-<LI><A HREF="2-7.html">2.7  簡単なアプリケーションの作成 (W/S Version) </A></LI>
-<LI><A HREF="2-8.html">2.8  その他 (W/S Version) </A></LI>
+	<LI><A HREF="2-1.html">2.1  環境構築 </A></LI>
+	<LI><A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A></LI>
+	<LI><A HREF="2-3.html">2.3  各ウィンドウの名称と機能 </A></LI>
+	<LI><A HREF="2-4.html">2.4  W/S Versionが持つ機能 </A></LI>
+	<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行 (W/S Version) </A></LI>
+	<LI><A HREF="2-6.html">2.6  サンプルアプリケーションのソース解説 (W/S Version) </A></LI>
+	<LI><A HREF="2-7.html">2.7  簡単なアプリケーションの作成 (W/S Version) </A></LI>
+	<LI><A HREF="2-8.html">2.8  BODYListとOBJECTList </A></LI>
+	<LI><A HREF="2-9.html">2.9  その他 (W/S Version) </A></LI>
 
 </ul>
 
 <H2>第3章 W/S Ver. 関数ライブラリリファレンス</H2>
 <ul>
-<LI><A HREF="3-1.html">3.1  ライブラリ構成 </A></LI>
-<LI><A HREF="3-2.html">3.2  NURBS演算ライブラリ </A></LI>
-<LI><A HREF="3-3.html">3.3  BODY描画/操作ライブラリ </A></LI>
-<LI><A HREF="3-4.html">3.4  数値演算ライブラリ </A></LI>
-<LI><A HREF="3-5.html">3.5  IGESパーサ </A></LI>
-<LI><A HREF="3-6.html">3.6  STLパーサ </A></LI>
-<LI><A HREF="3-7.html">3.7  ユーザー部 </A></LI>
-<LI><A HREF="3-8.html">3.8  CADデータの内部表現 </A></LI>
-<LI><A HREF="3-9.html">3.9  システム </A></LI>
+	<LI><A HREF="3-1.html">3.1  ライブラリ構成 </A></LI>
+	<LI><A HREF="3-2.html">3.2  NURBS演算ライブラリ </A></LI>
+	<LI><A HREF="3-3.html">3.3  BODY描画/操作ライブラリ </A></LI>
+	<LI><A HREF="3-4.html">3.4  数値演算ライブラリ </A></LI>
+	<LI><A HREF="3-5.html">3.5  IGESパーサ </A></LI>
+	<LI><A HREF="3-6.html">3.6  STLパーサ </A></LI>
+	<LI><A HREF="3-7.html">3.7  ユーザー部 </A></LI>
+	<LI><A HREF="3-8.html">3.8  CADデータの内部表現 </A></LI>
+	<LI><A HREF="3-9.html">3.9  システム </A></LI>
 </ul>
+
 <A HREF="references.html"><H2>参考資料</H2></A>
 
 
@@ -78,7 +80,7 @@
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Nov. 7, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
